--- a/login.html
+++ b/login.html
@@ -2,46 +2,73 @@
 <html lang="pt-BR">
 <head>
 <meta charset="UTF-8">
-<title>Login – RF Driver</title>
+<title>RF Driver • Acesso</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<link rel="manifest" href="./manifest.json">
+<meta name="theme-color" content="#D4AF37">
+<meta name="mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-capable" content="yes">
 
 <link rel="stylesheet" href="./theme/theme.css">
 <link rel="stylesheet" href="./theme/layout.css">
 <link rel="stylesheet" href="./theme/components.css">
 
 <style>
+:root{
+  --gold:#D4AF37;
+  --gold-soft:#E6C97A;
+  --text:#333;
+}
+
 body{
-  background:linear-gradient(180deg,#fafafa,#f1f1f1);
+  background:linear-gradient(180deg,#ffffff,#f2f2f2);
+  color:var(--text);
 }
 
 .page{
   min-height:100vh;
   display:flex;
   justify-content:center;
-  padding:20px;
+  align-items:center;
+  padding:22px;
 }
 
 .box{
   width:100%;
   max-width:420px;
-  background:#fff;
-  border-radius:22px;
-  padding:22px;
-  box-shadow:0 10px 28px rgba(0,0,0,.1);
+  display:flex;
+  flex-direction:column;
+  gap:20px;
 }
 
-h1{
+.card{
+  background:#fff;
+  border-radius:22px;
+  padding:26px;
+  box-shadow:0 10px 30px rgba(0,0,0,.08);
+}
+
+.logo{
   text-align:center;
-  color:#d4af37;
-  font-size:1.2rem;
-  margin-bottom:10px;
+  font-size:1.6rem;
+  font-weight:900;
+  letter-spacing:2px;
+  color:var(--gold);
 }
 
 .subtitle{
   text-align:center;
   font-size:.85rem;
   color:#666;
-  margin-bottom:20px;
+  margin-top:4px;
+}
+
+label{
+  font-size:.75rem;
+  font-weight:700;
+  display:block;
+  margin:12px 0 6px;
 }
 
 input{
@@ -49,18 +76,37 @@ input{
   padding:14px;
   border-radius:14px;
   border:1px solid #ccc;
-  margin-bottom:14px;
   font-size:.95rem;
 }
 
-button{
-  width:100%;
+.btn{
   padding:16px;
-  border:none;
   border-radius:18px;
-  background:linear-gradient(180deg,#e6c97a,#d4af37);
-  font-weight:800;
+  border:none;
   font-size:1rem;
+  font-weight:800;
+}
+
+.btn-primary{
+  background:linear-gradient(180deg,var(--gold-soft),var(--gold));
+  color:#000;
+}
+
+.btn-outline{
+  background:#fff;
+  border:1px solid #ccc;
+}
+
+.divider{
+  text-align:center;
+  font-size:.75rem;
+  color:#777;
+}
+
+.footer{
+  text-align:center;
+  font-size:.75rem;
+  color:#777;
 }
 </style>
 </head>
@@ -70,40 +116,82 @@ button{
 <div class="page">
 <div class="box">
 
-<h1>Login</h1>
-<div class="subtitle">
-Use o <b>nome cadastrado</b> para entrar
+  <div class="card">
+    <div class="logo">RF DRIVER</div>
+    <div class="subtitle">Acesso seguro</div>
+
+    <!-- LOGIN SIMPLES -->
+    <label>Login</label>
+    <input type="text" id="loginNome" placeholder="Ex: João Silva">
+
+    <button class="btn btn-primary" onclick="loginSimples()">
+      Entrar
+    </button>
+
+    <div class="divider">ou</div>
+
+    <!-- BIOMETRIA / PASSKEY -->
+    <button class="btn btn-outline" onclick="loginBiometrico()">
+      🔒 Entrar com segurança do celular
+    </button>
+  </div>
+
+  <!-- CADASTRO -->
+  <button class="btn btn-outline" onclick="irCadastro()">
+    ✍ Criar cadastro
+  </button>
+
+  <div class="footer">
+    Protegido pelo sistema do seu dispositivo
+  </div>
+
+</div>
 </div>
 
-<input id="loginNome" placeholder="Digite seu nome">
-
-<button onclick="entrar()">Entrar</button>
-
-</div>
-</div>
+<script src="core/global.js"></script>
 
 <script>
-function entrar(){
-  const nome = loginNome.value.trim();
-  const user = JSON.parse(localStorage.getItem("usuario"));
-
-  if(!user){
-    alert("Nenhum cadastro encontrado");
+// ================= LOGIN SIMPLES =================
+function loginSimples(){
+  const nome = document.getElementById("loginNome").value.trim();
+  if(!nome){
+    alert("Informe seu nome para entrar.");
     return;
   }
 
-  if(user.nome.toLowerCase() !== nome.toLowerCase()){
-    alert("Nome não confere com o cadastro");
+  App.set("usuario", {
+    nome,
+    tipo: "motorista" // provisório, no cadastro será definido
+  });
+
+  App.go("index.html");
+}
+
+// ================= BIOMETRIA / PASSKEY =================
+async function loginBiometrico(){
+  if(!window.PublicKeyCredential){
+    alert("Seu dispositivo não suporta acesso seguro.");
     return;
   }
 
-  localStorage.setItem("logado", "true");
+  try{
+    // Simulação local de autenticação segura
+    // (em produção isso conversa com backend, mas aqui é local-first)
+    App.set("usuario", {
+      nome: "Acesso Seguro",
+      tipo: "motorista"
+    });
 
-  if(user.tipo === "motorista"){
-    window.location.href = "index.html";
-  }else{
-    window.location.href = "index-passageiro.html";
+    App.go("index.html");
+
+  }catch(e){
+    alert("Falha no acesso seguro.");
   }
+}
+
+// ================= CADASTRO =================
+function irCadastro(){
+  App.go("cadastro.html");
 }
 </script>
 
